# RAG-Engine

./: .gitignore  CMakeLists.txt  README.md
build-vs2026/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RAGEngine.slnx  RagCore.vcxproj  RagCore.vcxproj.filters  RagPhysics.vcxproj  RagPhysics.vcxproj.filters  RagPlatform.vcxproj  RagPlatform.vcxproj.filters  RagRenderer.vcxproj  RagRenderer.vcxproj.filters  RagRendererVK.vcxproj  RagRendererVK.vcxproj.filters  RagRendererVKShaders.vcxproj  RagRendererVKShaders.vcxproj.filters  RagRuntime.vcxproj  RagRuntime.vcxproj.filters  RagSandbox.vcxproj  RagSandbox.vcxproj.filters  RagScene.vcxproj  RagScene.vcxproj.filters  RagSceneTests.vcxproj  RagSceneTests.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters
build-vs2026/Debug/: RagCore.lib  RagPhysics.lib  RagPlatform.lib  RagRenderer.lib  RagRuntime.lib  RagScene.lib
build-vs2026/RagCore.dir/Debug/: RagCore.lib.recipe
build-vs2026/RagCore.dir/Debug/RagCore.tlog/: CL.17068.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagCore.dir/Release/RagCore.tlog/: CL.28908.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagPhysics.dir/Debug/RagPhysics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagPhysics.dir/Release/RagPhysics.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  RagPhysics.lastbuildstate
build-vs2026/RagPlatform.dir/Debug/RagPlatform.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagPlatform.dir/Release/RagPlatform.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagRenderer.dir/Debug/RagRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagRenderer.dir/Release/RagRenderer.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagRendererVK.dir/Debug/: RagRendererVK.lib.recipe
build-vs2026/RagRendererVK.dir/Debug/RagRendererVK.tlog/: CL.11520.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagRendererVK.dir/Release/: RagRendererVK.lib.recipe
build-vs2026/RagRendererVK.dir/Release/RagRendererVK.tlog/: CL.11112.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagRuntime.dir/Debug/RagRuntime.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagRuntime.dir/Release/RagRuntime.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagSandbox.dir/Debug/: RagSandbox.exe.recipe
build-vs2026/RagSandbox.dir/Debug/RagSandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs2026/RagSandbox.dir/Release/: RagSandbox.exe.recipe
build-vs2026/RagSandbox.dir/Release/RagSandbox.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs2026/RagScene.dir/Debug/RagScene.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagScene.dir/Release/RagScene.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/RagSceneTests.dir/Debug/: RagSceneTests.exe.recipe
build-vs2026/RagSceneTests.dir/Debug/RagSceneTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs2026/RagSceneTests.dir/Release/: RagSceneTests.exe.recipe
build-vs2026/RagSceneTests.dir/Release/RagSceneTests.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs2026/Release/: RagCore.lib  RagPhysics.lib  RagPlatform.lib  RagRenderer.lib  RagRuntime.lib  RagScene.lib  imgui.lib
build-vs2026/imgui.dir/Debug/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/imgui.dir/Release/imgui.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs2026/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cmake/: RagCompilerOptions.cmake  RagVulkan.cmake
docs/: engine-architecture-roadmap.md  phase-1-foundation.md  phase-2-vulkan-renderer.md  phase-4-scene-runtime.md
sandbox/: SandboxMain.cpp
src/Rag/Core/: Application.cpp  Application.h  Assert.h  Base.h  Clock.cpp  Clock.h  Event.h  Input.cpp  Input.h  Log.cpp  Log.h  Math.h
src/Rag/Physics/: PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h
src/Rag/Platform/: Window.h
src/Rag/Renderer/: Renderer.cpp  Renderer.h
src/Rag/RendererVK/: VulkanRenderer.cpp  VulkanRenderer.h
src/Rag/Scene/: ComponentStorage.h  Components.h  Entity.h  Scene.cpp  Scene.h
tests/: SceneRuntimeTests.cpp
(+61 files in other folders)
